# AgTower

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  biome.json  index.html  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-macos.yml
agtower.icon/: icon.json
scripts/: rename-dmg.mjs
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/resources/: Assets.car  tmux.conf
src-tauri/src/: app_state.rs  control_socket.rs  lib.rs  main.rs  pty_manager.rs
src-tauri/src/commands/: appearance.rs  discovery.rs  engine_commands.rs  haptics.rs  mod.rs  power.rs  repo.rs  sound.rs  terminal.rs  tray.rs  view_commands.rs  window.rs
src-tauri/src/engine/: computation.rs  database.rs  mod.rs  repo_store.rs  session_store.rs
src-tauri/src/providers/: mod.rs  types.rs
src-tauri/src/providers/claude_code/: detection.rs  discovery.rs  mod.rs
src-tauri/src/providers/codex/: detection.rs  discovery.rs  mod.rs
src/components/: app-init-provider.tsx  app-shell-toolbar-content.tsx  app-shell-toolbar.tsx  app-shell.tsx  app-sidebar.tsx  app-welcome-icon.tsx  breadcrumb.tsx  delete-session-dialog.tsx  error-boundary.tsx  motion-provider.tsx  new-session-dialog.tsx  page-transition.tsx  shortcut-bar.tsx  shortcut-modal.tsx  theme-provider.tsx  update-pill.tsx
src/hooks/: use-app-init-helpers.test.ts  use-app-init-helpers.ts  use-app-init.ts  use-attention-signals.ts  use-deep-link.ts  use-fullscreen-state.ts  use-keyboard-shortcuts.ts  use-native-app-commands.ts  use-native-macos-window-chrome.ts  use-repo.ts  (+9 more)
(+147 files in other folders)
